--- a/templates/keypad.tpl.html
+++ b/templates/keypad.tpl.html
@@ -38,6 +38,6 @@
         <div data-role="button" data-theme="a" class="keypad-button">0</div>
     </div>
     <div class="ui-block-b ui-block-c" id="clear-button-wrapper">
-        <div id="clear-button" data-role="button" data-theme="b" class="action-button">Clear</div>
+        <div id="clear-button" data-role="button" data-theme="b" class="action-button ui-disabled">Clear</div>
     </div>
 </fieldset>
