--- a/templates/keypad.tpl.html
+++ b/templates/keypad.tpl.html
@@ -32,7 +32,7 @@
         <div data-role="button" data-theme="a" class="keypad-button">9</div>
     </div>
     <div class="ui-block-a" id="clear-button-wrapper">
-        <div id="clear-button" data-role="button" data-theme="b" class="action-button ui-disabled">Clear</div>
+        <div id="clear-button" data-role="button" data-theme="b" class="action-button">Clear</div>
     </div>
     <div class="ui-block-b">
         <div data-role="button" data-theme="a" class="keypad-button">0</div>
