--- a/css/main.css
+++ b/css/main.css
@@ -64,6 +64,10 @@
 	border-radius: .3em;
 }
 
+#clear-button-wrapper .ui-btn-inner {
+	padding: .6em 15px;
+}
+
 .keypad-button .ui-btn-inner,
 .action-button .ui-btn-inner {
 	border-top: none;
@@ -71,7 +75,7 @@
 
 #code-label-wrapper {
 	width: 100%;
-	padding: 0 4px 5px 4px;
+	padding: 0 6px 5px 5px;
 }
 
 #code-label-border {
