--- a/templates/keypad.tpl.html
+++ b/templates/keypad.tpl.html
@@ -1,4 +1,4 @@
-<fieldset class="ui-grid-b" id="keypad">
+<fieldset class="ui-grid-b">
     <div id="code-label-wrapper" class="ui-block-a ui-block-b ui-block-c">
         <div id="code-label-border">
             <div id="code-label"></div>
