--- a/templates/stop-list.tpl.html
+++ b/templates/stop-list.tpl.html
@@ -1,5 +1,7 @@
-<% _.each(stops, function(stop) { %>
-<li>
-    <a href='#tour/<%= tourID %>/stop/<%= stop.get('id') %>'><%= stop.get('title') %></a>
-</li>
-<% }); %>
+<ul data-inset="true" data-role="listview" data-filter="true">
+    <% _.each(stops, function(stop) { %>
+    <li>
+        <a href='#tour/<%= tourID %>/stop/<%= stop.get('id') %>'><%= stop.get('title') %></a>
+    </li>
+    <% }); %>
+</ul>
