--- a/templates/header.tpl.html
+++ b/templates/header.tpl.html
@@ -1,2 +1,3 @@
 <a href="#" id="back-btn" data-role="back" data-icon="arrow-l">Back</a>
 <h3><%= title %></h3>
+<a href="#" data-role="button" data-icon="social" data-iconpos="notext" data-iconshadow="false" class="ui-icon-nodisc">Social</a>
