Dynamically loading the stop selection controller based on user configurations.

--- a/templates/tour-details.tpl.html
+++ b/templates/tour-details.tpl.html
@@ -1,2 +1,2 @@
 <p><%= description %></p>
-<a href="#tour/<%= tourID %>/<%= defaultStopSelectionView %>" id="start-tour" data-role="button" data-theme="b">Start Tour</a>
+<a href="#tour/<%= tourID %>/controller/<%= defaultStopSelectionView %>" id="start-tour" data-role="button" data-theme="b">Start Tour</a>
