--- a/templates/stop-list.tpl.html
+++ b/templates/stop-list.tpl.html
@@ -1,7 +1,10 @@
 <ul data-inset="true" data-role="listview" data-filter="true">
     <% _.each(stops, function(stop) { %>
     <li>
-        <a href='#tour/<%= tourID %>/stop/<%= stop.get('id') %>'><%= stop.get('title') %></a>
+        <a href='#tour/<%= tourID %>/stop/<%= stop.get('id') %>'>
+            <img src="<%= stop.get('icon') %>" class="ui-li-icon ui-li-thumb" />
+            <%= stop.get('title') %>
+        </a>
     </li>
     <% }); %>
 </ul>
