--- a/templates/social-popup.tpl.html
+++ b/templates/social-popup.tpl.html
@@ -1,4 +1,8 @@
 <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
 <div data-role="content" data-theme="d" role="main">
+    Share on
+
+            <div id="fb-root"></div>
+            <fb:like href=”http://seomention.com” layout=”box_count” show_faces=”false” width=”450″ action=”recommend” font=”arial” ></fb:like >
 
 </div>
