--- a/templates/social-popup.tpl.html
+++ b/templates/social-popup.tpl.html
@@ -1,8 +1,10 @@
 <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
 <div data-role="content" data-theme="d" role="main">
-    Share on
-
-            <div id="fb-root"></div>
-            <fb:like href=”http://seomention.com” layout=”box_count” show_faces=”false” width=”450″ action=”recommend” font=”arial” ></fb:like >
-
+    <p>Share TAP</p>
+    <div id="twitter-share-button" class="share-button">
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://tap-web-app.lcl/devel.html">Tweet</a>
+    </div>
+    <div id="facebook-share-button" class="share-button">
+        <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fdlcervantes.com%2Ftap-web-app%2Fdevel.html&amp;send=false&amp;layout=button_count&amp;width=250&amp;show_faces=false&amp;font=arial&amp;colorscheme=light&amp;action=like&amp;height=21&amp;appId=417559234998011" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:250px; height:21px;" allowTransparency="true"></iframe>
+    </div>
 </div>
