--- a/templates/social-popup.tpl.html
+++ b/templates/social-popup.tpl.html
@@ -1,10 +1,14 @@
 <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+<div data-role="header" data-theme="a" class="ui-corner-top">
+    <h1>Share TAP</h1>
+</div>
 <div data-role="content" data-theme="d" role="main">
-    <p>Share TAP</p>
     <div id="twitter-share-button" class="share-button">
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://tap-web-app.lcl/devel.html">Tweet</a>
+        <iframe allowtransparency="true" frameborder="0" scrolling="no"
+                src="http://platform.twitter.com/widgets/tweet_button.html?url=<%= url %>"
+                style="width:100px; height:20px;"></iframe>
     </div>
     <div id="facebook-share-button" class="share-button">
-        <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fdlcervantes.com%2Ftap-web-app%2Fdevel.html&amp;send=false&amp;layout=button_count&amp;width=250&amp;show_faces=false&amp;font=arial&amp;colorscheme=light&amp;action=like&amp;height=21&amp;appId=417559234998011" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:250px; height:21px;" allowTransparency="true"></iframe>
+        <iframe src="http://www.facebook.com/plugins/like.php?href=<%= url %>&amp;send=false&amp;layout=button_count&amp;width=100&amp;show_faces=false&amp;font=arial&amp;colorscheme=light&amp;action=like&amp;height=21&amp;appId=417559234998011" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
     </div>
 </div>
