--- a/templates/header.tpl.html
+++ b/templates/header.tpl.html
@@ -1,3 +1,6 @@
 <a href="#" id="back-button" data-role="back" data-icon="arrow-l">Back</a>
 <h3><%= title %></h3>
-<a href="#" id="social-button" data-role="button" data-icon="social" data-iconpos="notext" data-iconshadow="false" class="ui-icon-nodisc">Social</a>
+<% if (displaySocialButton) { %>
+<a href="#" id="social-button" data-role="button" data-icon="social" data-iconpos="notext"
+data-iconshadow="false" class="ui-icon-nodisc">Social</a>
+<% } %>
