--- a/templates/social-popup.tpl.html
+++ b/templates/social-popup.tpl.html
@@ -9,6 +9,6 @@
                 style="width:100px; height:20px;"></iframe>
     </div>
     <div id="facebook-share-button" class="share-button">
-        <iframe src="http://www.facebook.com/plugins/like.php?href=<%= url %>&amp;send=false&amp;layout=button_count&amp;width=100&amp;show_faces=false&amp;font=arial&amp;colorscheme=light&amp;action=like&amp;height=21&amp;appId=417559234998011" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
+        <iframe src="http://www.facebook.com/plugins/like.php?href=<%= url %>&amp;send=false&amp;layout=button_count&amp;width=100&amp;show_faces=false&amp;font=arial&amp;colorscheme=light&amp;action=like&amp;height=21&amp;appId=<%= FBAppID %>" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100px; height:21px;" allowTransparency="true"></iframe>
     </div>
 </div>
