Updates to back button in case of single tour.

--- a/templates/header.tpl.html
+++ b/templates/header.tpl.html
@@ -1,6 +1,8 @@
+<% if (displayBackButton) { %>
 <a href="#" id="back-button" data-role="back" data-icon="arrow-l">Back</a>
+<% } %>
 <h3><%= title %></h3>
 <% if (displaySocialButton) { %>
-<a href="#" id="social-button" data-role="button" data-icon="social" data-iconpos="notext"
-data-iconshadow="false" class="ui-icon-nodisc">Social</a>
+<a href="#" id="social-button" data-role="button" data-icon="social" 
+data-iconpos="notext" data-iconshadow="false" class="ui-icon-nodisc ui-btn-right">Social</a>
 <% } %>
