--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,10 @@
 /*** Video Stops ***/
 #video-stop .player {
     width: 100%;
+    min-width: 240px;
+    max-width:100%;
+    height: 100%;
+    min-height: 240px;
 }
 
 /* Image Stop */
