--- a/css/main.css
+++ b/css/main.css
@@ -180,10 +180,18 @@
     margin: 20px;
 }
 
-/*** Audio Stops ***/
-#audio-stop {
+/* Media Player */
+.player {
+    max-width: 100%;
+}
+.mejs-overlay-play {
+    display: none;
+}
+.mejs-poster {
+    height: 100%;
     width: 100%;
 }
+/*** Audio Stops ***/
 
 #audio-stop .poster-image {
     width: 100%;
@@ -191,11 +199,7 @@
 
 /*** Video Stops ***/
 #video-stop .player {
-    width: 100%;
-    min-width: 240px;
-    max-width:100%;
-    height: 100%;
-    min-height: 240px;
+    max-width: 100%;
 }
 
 /* Image Stop */
