--- a/templates/video.tpl.html
+++ b/templates/video.tpl.html
@@ -1,4 +1,4 @@
-<video id="video-player" width="640" height="360" class="player" controls="controls" autoplay="autoplay" poster="<%= imagePath %>">
+<video id="video-player" class="player" controls="controls" autoplay="autoplay">
 	<p>Your browser does not support the HTML5 video</p>
 	<% _.each(sources, function(source) { %>
 	<%= source %>
