Posters will no longer be shown for YouTube embeds.

--- a/css/main.css
+++ b/css/main.css
@@ -184,9 +184,7 @@
 .player {
     max-width: 100%;
 }
-.mejs-overlay-play {
-    display: none;
-}
+.mejs-overlay-play,
 .mejs-poster {
     height: 100%;
     width: 100%;
