--- a/templates/map-marker-bubble.tpl.html
+++ b/templates/map-marker-bubble.tpl.html
@@ -1,8 +1,17 @@
-<div class='marker-bubble-content'>
-	<div class='title'><%= title %></div>
-	<div class='distance'><%= distance %></div>
-	<div class='view-button'><a href='#tour/<%= tourID %>/stop/<%= stopID %>'>View stop</a></div>
-	<div class='directions'>
-		<a href='http://maps.google.com/maps?saddr=Current%20Location&daddr=<%= stopLat %>,<%= stopLong %>'>Get Directions</a>
+<div class="marker-bubble-content">
+	<div class="title"><%= title %></div>
+	<div class="distance"><%= distance %></div>
+	<div class="stop-options">
+        <a href="#tour/<%= tourID %>/stop/<%= stopID %>" class="ui-btn ui-shadow ui-btn-corner-all ui-mini ui-btn-inline ui-btn-up-c">
+            <span class="ui-btn-inner">
+                <span class="ui-btn-text">View Stop</span>
+            </span>
+        </a>
+        <a href="http://maps.google.com/maps?saddr=Current%20Location&daddr=<%= stopLat %>,<%= stopLong %>"
+            class="ui-btn ui-shadow ui-btn-corner-all ui-mini ui-btn-inline ui-btn-up-c">
+            <span class="ui-btn-inner">
+                <span class="ui-btn-text">Directions</span>
+            </span>
+        </a>
 	</div>
 </div>
