--- a/templates/audio.tpl.html
+++ b/templates/audio.tpl.html
@@ -1,3 +1,4 @@
+<h3 class="stop-title"><%= title %></h3>
 <audio id="audio-player" class="player" controls="controls">
 	<p>Your browser does not support HTML 5 audio.</p>
 	<% _.each(sources, function(source) { %>
