--- a/templates/image-stop.tpl.html
+++ b/templates/image-stop.tpl.html
@@ -1,3 +1,4 @@
+<h3 class="stop-title"><%= title %></h3>
 <% _.each(images, function(image) { %>
 	<li>
 		<a href="<%= image.originalUri %>" rel="external">
