--- a/templates/stop-group.tpl.html
+++ b/templates/stop-group.tpl.html
@@ -3,6 +3,7 @@
     <img src="<%= header %>" />
 </div>
 <% } %>
+<h3 class="stop-title"><%= title %></h3>
 <div class='description'><%= description %></div>
 <ul id="stop-list" data-role="listview" data-inset="true">
 <% _.each(stops, function(stop) { %>
