--- a/templates/video.tpl.html
+++ b/templates/video.tpl.html
@@ -1,3 +1,4 @@
+<h3 class="stop-title"><%= title %></h3>
 <video id="video-player" class="player" controls="controls" autoplay="autoplay" poster="<%= imagePath %>">
 	<p>Your browser does not support the HTML5 video</p>
 	<% _.each(sources, function(source) { %>
