--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,10 @@
     border-radius: .3em;
 }
 
+#clear-button-wrapper .ui-btn-inner {
+    padding: .6em 0;
+}
+
 .keypad-button .ui-btn-inner,
 .action-button .ui-btn-inner {
     border-top: none;
