add stop code display option to stop list view

--- a/templates/stop-list.tpl.html
+++ b/templates/stop-list.tpl.html
@@ -4,6 +4,9 @@
         <a href='#tour/<%= tourID %>/stop/<%= stop.get('id') %>'>
             <img src="<%= stop.get('icon') %>" class="ui-li-icon ui-li-thumb" />
             <%= stop.get('title') %>
+            <% if (displayCodes) { %>
+            <span class="ui-li-count"><%= stop.getProperty('code') %></span>
+            <% } %>
         </a>
     </li>
     <% }); %>
