--- a/templates/popup.tpl.html
+++ b/templates/popup.tpl.html
@@ -5,6 +5,6 @@
 <% } %>
 <div data-role="content" data-theme="d" role="main">
 	<p><%= message %></p>
-	<a href="#" id="dialog-cancel" data-role="button" data-rel="back" data-theme="c"
+	<a href="#" id="dialog-cancel" data-role="button" data-theme="c"
 		data-corners="true" data-shadow="true" data-iconshadow="true" data-wrapperels="span"><%= cancelButtonTitle %></a>
 </div>
