--- a/templates/tour-details.tpl.html
+++ b/templates/tour-details.tpl.html
@@ -5,4 +5,4 @@
 <% } %>
 <h3 class="tour-title"><%= title %></h3>
 <p><%= description %></p>
-<a href="#tour/<%= tourID %>/controller/<%= defaultStopSelectionView %>" id="start-tour" data-role="button" data-theme="b">Start Tour</a>
+<a href="<%= defaultStopSelectionView %>" id="start-tour" data-role="button" data-theme="b">Start Tour</a>
