--- a/templates/stop-list.tpl.html
+++ b/templates/stop-list.tpl.html
@@ -1,12 +1,12 @@
-<ul data-inset="true" data-role="listview" data-filter="true">
+<ul  data-role="listview" data-filter="true">
     <% _.each(stops, function(stop) { %>
     <li>
         <a href='#tour/<%= tourID %>/stop/<%= stop.get('id') %>'>
-            <img src="<%= stop.get('icon') %>" class="ui-li-icon ui-li-thumb" />
-            <%= stop.get('title') %>
-            <% if (displayCodes) { %>
+            <% if (displayCodes && stop.getProperty('code')) { %>
             <span class="ui-li-count"><%= stop.getProperty('code') %></span>
             <% } %>
+            <img src="<%= stop.get('icon') %>" class="ui-li-icon ui-li-thumb" />
+            <%= stop.get('title') %>
         </a>
     </li>
     <% }); %>
