--- a/css/main.css
+++ b/css/main.css
@@ -82,14 +82,19 @@
 .tour-title {
     background: rgb(0,0,0);
     background: rgba(0,0,0,.7);
-    padding: 10px;
+    padding: 0;
     color: #FFF;
     z-index: 99;
     text-shadow: none;
     position: absolute;
-    bottom: 3px;
+    bottom: 4px;
     left: 0;
     width: 100%;
+}
+
+.tour-title span {
+    display: block;
+    padding: 10px;
 }
 
 /* Tour Details */
