--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@
     width: 100%;
 }
 
-.tour-title {
+div.tour-title {
     background: rgb(0,0,0);
     background: rgba(0,0,0,.7);
     padding: 0;
