--- a/templates/audio.tpl.html
+++ b/templates/audio.tpl.html
@@ -8,6 +8,12 @@
 <% if (!_.isEmpty(imagePath)) { %>
 	<img class="poster-image" src="<%= imagePath %>" />
 <% } %>
+<% if (!_.isEmpty(description)) { %>
+<div class="description" data-role="collapsible" data-content-theme="c">
+	<h3>Description</h3>
+	<%= description %>
+</div>
+<% } %>
 <% if (!_.isEmpty(transcription)) { %>
 <div id="transcription" data-role="collapsible" data-content-theme="c">
 	<h3>Transcript</h3>
