--- a/templates/image-stop.tpl.html
+++ b/templates/image-stop.tpl.html
@@ -2,7 +2,7 @@
 <% _.each(images, function(image) { %>
 	<li>
 		<a href="<%= image.originalUri %>" rel="external">
-			<img src="<%= image.thumbnailUri %>" alt="<%= image.caption %>" title="<%= image.title %>" />
+			<img src="<%= image.thumbnailUri %>" data-caption="<%= image.caption %>" title="<%= image.title %>" />
 		</a>
 	</li>
 <% }) %>
