updated web stop & video

--- a/templates/video.tpl.html
+++ b/templates/video.tpl.html
@@ -5,6 +5,11 @@
 	<%= source %>
 	<% }); %>
 </video>
+<% if (!_.isEmpty(description)) { %>
+<div id="description" data-role="collapsible" data-content-theme="c">
+	<h3>Description</h3>
+	<p><%= description %></p>
+<% } %>
 <% if (!_.isEmpty(transcription)) { %>
 <div id="transcription" data-role="collapsible" data-content-theme="c">
 	<h3>Transcript</h3>
