--- a/templates/web.tpl.html
+++ b/templates/web.tpl.html
@@ -1,2 +1,5 @@
 <h3 class="stop-title"><%= title %></h3>
 <div id="html-container"><%= html %></div>
+<% if (!_.isUndefined(nextStopPath)) { %>
+    <a href="<%= nextStopPath %>" data-role="button">next</a>
+<% } %>
