adding next stop to templates

--- a/templates/audio.tpl.html
+++ b/templates/audio.tpl.html
@@ -20,3 +20,6 @@
 	<p><%= transcription %></p>
 </div>
 <% } %>
+<% if (!_.isUndefined(nextStopPath)) { %>
+    <a href="<%= nextStopPath %>" data-role="button">next</a>
+<% } %>
