--- a/templates/image-stop.tpl.html
+++ b/templates/image-stop.tpl.html
@@ -6,3 +6,6 @@
 		</a>
 	</li>
 <% }) %>
+<% if (!_.isUndefined(nextStopPath)) { %>
+    <a href="<%= nextStopPath %>" data-role="button">next</a>
+<% } %>
