--- a/templates/stop-list.tpl.html
+++ b/templates/stop-list.tpl.html
@@ -1,7 +1,7 @@
 <ul  data-role="listview" data-filter="true">
     <% _.each(stops, function(stop) { %>
     <li>
-        <a href='#tour/<%= tourID %>/stop/<%= stop.get('id') %>'>
+        <a href='<%= stop.getRoute() %>'>
             <% if (displayCodes && stop.getProperty('code')) { %>
             <span class="stop-code"><%= stop.getProperty('code') %></span>
             <span class="title-with-code">
