--- a/templates/stop-group.tpl.html
+++ b/templates/stop-group.tpl.html
@@ -8,7 +8,7 @@
 <ul id="stop-list" data-role="listview" data-inset="true">
 <% _.each(stops, function(stop) { %>
     <li>
-        <a href="<%= stop.getRoute() %>">
+        <a href="<%= stop.route %>">
             <img src="<%= stop.icon %>" class="ui-li-icon ui-li-thumb" />
             <%= stop.title %>
         </a>
