add ability for thumbnails in stop list view

--- a/templates/stop-list.tpl.html
+++ b/templates/stop-list.tpl.html
@@ -5,6 +5,9 @@
             <% if (displayCodes && stop.model.getProperty('code')) { %>
             <span class="stop-code"><%= stop.model.getProperty('code') %></span>
             <span class="title-with-code">
+            <% } else if (displayThumbnails && thumbnail) { %>
+            <img src="<%= stop.icon %>" class="ui-li-thumb" />
+            <span class="title-with-thumbnail">
             <% } else { %>
             <img src="<%= stop.icon %>" class="ui-li-icon ui-li-thumb" />
             <span>
