--- a/templates/video.tpl.html
+++ b/templates/video.tpl.html
@@ -9,11 +9,13 @@
 <div id="description" data-role="collapsible" data-content-theme="c">
 	<h3>Description</h3>
 	<p><%= description %></p>
+</div>
 <% } %>
 <% if (!_.isEmpty(transcription)) { %>
 <div id="transcription" data-role="collapsible" data-content-theme="c">
 	<h3>Transcript</h3>
 	<p><%= transcription %></p>
+</div>
 <% } %>
 <% if (!_.isUndefined(nextStopPath)) { %>
     <a href="<%= nextStopPath %>" data-role="button">next</a>
