--- a/templates/audio.tpl.html
+++ b/templates/audio.tpl.html
@@ -21,5 +21,5 @@
 </div>
 <% } %>
 <% if (!_.isUndefined(nextStopPath)) { %>
-    <a href="<%= nextStopPath %>" data-role="button">next</a>
+    <a href="<%= nextStopPath %>" data-role="button" class="next-button">next</a>
 <% } %>
