--- a/templates/video.tpl.html
+++ b/templates/video.tpl.html
@@ -18,5 +18,5 @@
 </div>
 <% } %>
 <% if (!_.isUndefined(nextStopPath)) { %>
-    <a href="<%= nextStopPath %>" data-role="button">next</a>
+    <a href="<%= nextStopPath %>" data-role="button" class="next-button">next</a>
 <% } %>
