adds class to image stop gallery links that the view js explicitly attaches to-- now that we have the possibility of a next button in the template, need to make sure that we don't bind the gallery event to that link

--- a/templates/image-stop.tpl.html
+++ b/templates/image-stop.tpl.html
@@ -3,7 +3,7 @@
 <ul class="ui-grid-b" id="gallery">
 <% _.each(images, function(image) { %>
 	<li>
-		<a href="<%= image.originalUri %>" rel="external">
+		<a href="<%= image.originalUri %>" rel="external" class="gallery-link">
 			<img src="<%= image.thumbnailUri %>" data-caption="<%= image.caption %>" title="<%= image.title %>" />
 		</a>
 	</li>
