slider in stop group, and audio

--- a/templates/audioSlideshow.tpl.html
+++ b/templates/audioSlideshow.tpl.html
@@ -18,6 +18,12 @@
     <%= description %>
 </div>
 <% } %>
+<% if (!_.isEmpty(transcription)) { %>
+<div id="transcription" data-role="collapsible" data-content-theme="c">
+    <h3>Transcript</h3>
+    <p><%= transcription %></p>
+</div>
+<% } %>
 <% if (!_.isUndefined(nextStopPath)) { %>
     <a href="<%= nextStopPath %>" data-role="button" class="next-button">next</a>
 <% } %>
