--- a/templates/stop-group.tpl.html
+++ b/templates/stop-group.tpl.html
@@ -1,6 +1,24 @@
-<% if (!_.isUndefined(header)) { %>
+<% if (audioSources.length > 0) { %>
+<audio id="audio-player" class="player" controls="controls">
+    <p>Your browser does not support HTML 5 audio.</p>
+    <% _.each(audioSources, function(source) { %>
+    <%= source %>
+    <% }); %>
+</audio>
+<% } %>
+<% if (!_.isUndefined(header) || images.length > 0) { %>
 <div id="header-wrapper">
     <img src="<%= header %>" />
+    <% if (images.length > 0) { %>
+    <ul class="rslides">
+    <% _.each(images, function(image) { %>
+    <li class="image-slide">
+        <img src="<%= image.originalUri %>" data-caption="<%= image.caption %>" title="<%= image.title %>" />
+        <p class="caption"><%= image.title %><br /><%= image.caption %></p>
+    </li>
+    <% }); %>
+    </ul>
+    <% } %>
 </div>
 <% } %>
 <h3 class="stop-title"><%= title %></h3>
@@ -15,3 +33,9 @@
     </li>
 <% }); %>
 </ul>
+<% if (!_.isEmpty(transcription)) { %>
+<div id="transcription" data-role="collapsible" data-content-theme="c" data-inset="true">
+    <h3>Audio Transcript</h3>
+    <p><%= transcription %></p>
+</div>
+<% } %>
