--- a/templates/bundle-home.tpl.html
+++ b/templates/bundle-home.tpl.html
@@ -10,9 +10,16 @@
 	.ui-title {
 		font-size: 13px !important;
 	}
+	.homeHeader {
+		height: 200px;
+		width: 100%;
+		background-image: url(<%= headerImageUri %>);
+		background-size: 160% auto;
+		background-position: center center;
+	}
 </style>
 <header>
-	<img src="<%= headerImageUri %>">
+	<div class="homeHeader"></div>
 </header>
 <ul id="tour-list" class="ui-listview" data-split-icon="info" data-split-theme="d" data-role="listview">
 	<% _.each(tours, function(tour, i) { %>
